--- a/Desktop/Vem ser DBC/app-clima/app-clima/package.json
+++ b/Desktop/Vem ser DBC/app-clima/app-clima/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.8",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@types/sass": "^1.45.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.60.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
